src/test/ui/parser/issues/issue-63116.stderr
error: mismatched closing delimiter: `]`
  --> $DIR/issue-63116.rs:3:16
   |
LL | impl W <s(f;Y(;]
   |              - ^ mismatched closing delimiter
   |              |
   |              unmatched opening delimiter begins here

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `;`
  --> $DIR/issue-63116.rs:3:12
   |
LL | impl W <s(f;Y(;]
   |            ^ expected one of 7 possible tokens

error: expected one of `!`, `&&`, `&`, `(`, `)`, `*`, `+`, `,`, `->`, `...`, `::`, `<`, `>`, `?`, `[`, `_`, `async`, `const`, `dyn`, `extern`, `fn`, `for`, `impl`, `unsafe`, `~`, lifetime, or path, found `;`
  --> $DIR/issue-63116.rs:3:15
   |
LL | impl W <s(f;Y(;]
   |               ^ expected one of 27 possible tokens
   |
help: you might have meant to end the type parameters here
   |
LL | impl W <s(f;Y(>;]
   |               +

error: aborting due to 3 previous errors

