src/test/ui/parser/issues/issue-63116.rs
// fixed by #66361
// error-pattern: this file contains an unclosed delimiter
impl W <s(f;Y(;]
